--- a/index.css
+++ b/index.css
@@ -131,11 +131,12 @@ main {
 }
 
 .saleBanner {
+  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 2rem;
   width: 100%;
-  padding: 2rem;
+  padding: 2rem 0;
   text-align: center;
   color: white;
   background-color: #ff5e33;
