--- a/index.css
+++ b/index.css
@@ -18,10 +18,11 @@ h1 {
 }
 h2 {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
 }
 h3 {
   font-size: 1.5rem;
+  margin: 2rem 0 0.2rem 0;
 }
 p {
   font-size: 1.2rem;
@@ -97,6 +98,16 @@ main {
   color: rgb(150, 167, 185);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.8rem;
+}
+
+.v1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+  transition: color 0.5s ease;
+}
+
+.v1:hover {
+  color: #f2a4d2;
 }
 
 .divider {
