--- a/index.css
+++ b/index.css
@@ -146,6 +146,10 @@ main {
   color: #f38d8d;
 }
 
+.mov {
+  color: #f3ce8d;
+}
+
 .saleBanner {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
